syntax = "proto3";

option go_package = "github.com/esmailemami/chess/api-gateway/internal/grpc";

service AuthService {
	rpc Authenticate(AuthenticateRequest) returns(AuthenticateResponse);
}

message AuthenticateRequest {
	string Token = 1;
}

message AuthenticateResponse {
	string UserId = 1;
	string FirstName = 2;
	string LastName = 3;
	string Username = 4;
}